# my_fridge_image_model

./: .gitignore  README.md  check_outputs.py  download_data.py  main.py  metadata.py  pyproject.toml  setup.sh
conf/: device.yaml  export.yaml  train.yaml
configs/: data.yaml
data/labels/test/: 20251009_014357_jpg.rf.6815785452c75904b0ee13f73cd91a46.txt
data/labels/train/: 20251009_014313_jpg.rf.c2659c2f791072715cc2018b4e4be389.txt  20251009_014316_jpg.rf.c0be4bdafa3cd41bc88fc67655f59456.txt  20251009_014325_jpg.rf.cd2f3312bf77fb6f4548f716ab7f4c8d.txt  20251009_014336_jpg.rf.08e1af2848cbec01d84a2fb99bd344f2.txt  20251009_014341_jpg.rf.7a73d0ed22b4bcdf2cf3d494952a0a54.txt  20251009_014350_jpg.rf.b89f6d35b4c4cfc08312ddc05f5dd5df.txt  20251009_014352_jpg.rf.0c3b644ead81e987b3e9a964a95e4d26.txt  20251009_014405_jpg.rf.ca19d44346ecc3bf785c3f9d4dab51ed.txt  20251009_014406_jpg.rf.49ee3b427bdfdb6c3e55e08868d07dae.txt  20251009_014408_jpg.rf.8294f9244c8e2da0461adfeb35dc3f33.txt  20251009_014412_jpg.rf.5605e1ea9b79b8ccb0ead3d9dc6ca4e9.txt  20251009_014416_jpg.rf.3027e5c571dc885287ea5c4266762a83.txt  20251009_014448-0-_jpg.rf.71f80e28d8375e22be5039935fa4e756.txt  20251009_014448_jpg.rf.bd6b9a7278e6b023ea62fb0026a38d69.txt  20251009_014454_jpg.rf.eff279f724b77c35e6dadb22b9b2633f.txt  20251009_014455_jpg.rf.3402c61ce132edf351af3406d1604129.txt
my_fridge-1/: README.dataset.txt  README.roboflow.txt  data.yaml
outputs/2025-10-09/03-03-53/.hydra/: hydra.yaml
release/: labels.json
scripts/: export.sh  predict.sh  resume_train.sh  train.sh
src/: run_export.py  run_train.py
(+32 files in other folders)
